--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -9,7 +9,7 @@
   </div>
   <div class="col-6 d-flex align-items-start">
     <div id="profileControlsDesktopMobile" class="button-group">
-      <a href="#" id="toggle-drafts-mode" class="button outline-button full-width-button">{{!text set by the setDraftsButtonText function at the bottom of user.handlebars}}</a>
+      <a href="#" id="toggle-drafts-mode" class="button outline-button full-width-button">&zwnj;{{!text set by the setDraftsButtonText function at the bottom of user.handlebars, that character just maintains this button's height for the few milliseconds before that happens}}</a>
       <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-user-circle"></i> Edit profile</button>
       <a href="/settings" class="button outline-button full-width-button"><i class="fas fa-cog"></i> Settings</a>
       <a href="/logout" class="button outline-button full-width-button"><i class="fas fa-sign-out-alt"></i> Log out</a>
