--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -310,8 +310,9 @@
   </div>
   {{#unless isBanned}}
 <script>
-  //called immediately below and in restartInfiniteScroll
     activeScrollPath = '/showposts/community/{{communityData._id}}/';
+    
+  $(function(){
     startInfiniteScroll();
 
 {{#if loggedIn}}
@@ -516,6 +517,7 @@ $("#image-preview").css("background-position", "center center");
 {{/unless}}
 {{/if}}
 {{/if}}
+  })
 </script>
 {{/unless}}
 </div>
