--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,7 +54,7 @@
 
   {{> navbar }}
 
-  <main id="bodyContainer" class="container" style="overflow:hidden;">
+  <main id="bodyContainer" class="container" style="overflow:visible;">
 
     {{{body}}}
 
