--- a/views/partials/scriptPartials/miscInteractivityScripts.handlebars
+++ b/views/partials/scriptPartials/miscInteractivityScripts.handlebars
@@ -85,6 +85,8 @@ $(function() {
          $('#bodyContainer, #topNav').css('filter','none');
     });
 
+    $("#notificationsContainer").load( "/api/notification/display" );
+
   $('.clear-all-notifications').click(function() {
       $.post('/api/notifications/clearall', function(data){
           $("#notificationsContainer").load( "/api/notification/display" );
