--- a/views/partials/scriptPartials/contentLoadingScripts.handlebars
+++ b/views/partials/scriptPartials/contentLoadingScripts.handlebars
@@ -214,7 +214,7 @@ $(function(){
             if(!parentID){
                 var cc = $(activePosts[postID]).find(".comments-container");
             }else{
-                var cc = $($(activePosts[postID]).find('.comment[data-comment-id="'+parentID+'"]').find('.replies').get(1));
+                var cc = $(activePosts[postID]).find('.comment[data-comment-id="'+parentID+'"]').children('.replies');
             }
 
             cc.append(commentHTML);
