--- a/views/partials/scriptPartials/contentLoadingScripts.handlebars
+++ b/views/partials/scriptPartials/contentLoadingScripts.handlebars
@@ -185,13 +185,13 @@ $(function(){
                 post: '</strong>'
             }
         })
-        tribute.attach($(".ql-editor")); //attach to new post form and comment fields if there are any that aren't handled when their posts are appended (look a few lines down for that)
+        tribute.attach($(".ql-editor")); //attach to new post form and comment fields if there are any that aren't handled when their posts are appended in the infiniteScroll.append event
     });
 });
 
 {{/if}}
 
-    activePosts = {}; //this is populated in append.infiniteScroll below, lets us find posts instantly by their id to add or delete comments and stuff. todo: also populate for single posts that don't use this
+    activePosts = {}; //this is populated in append.infiniteScroll below, lets us find posts instantly by their id to add or delete comments and stuff.
 
     //loading notifications and comment stuff through websockets
 
@@ -243,6 +243,17 @@ $(function(){
             }
         }
     })
+
+    socket.on('notification(s) read', function(readNotifsArray){
+        var notificationsContainer = $('#notificationsContainer');
+        for(var i=0; i<readNotifsArray.length; i++){
+            notificationsContainer.children('#'+readNotifsArray[i]).removeClass('notification-active');
+        }
+        if(notificationsContainer.children('.notification-active').length === 0){
+            $('.notifications-count').html('');
+            document.title = 'sweet';
+        }
+    });
 
 $(function(){
 
