--- a/views/partials/notifications.handlebars
+++ b/views/partials/notifications.handlebars
@@ -13,8 +13,7 @@
     if ($('.notification-active').length > 0) {
       $(".notifications-count").html('<i class="fas fa-dot-circle"></i>');
       document.title = '(⚐) sweet';
-    }
-    else {
+    } else {
       $(".notifications-count").html('');
       document.title = 'sweet';
     }
