--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -10,7 +10,7 @@
   <div class="col-6 d-flex align-items-start">
     <div id="profileControlsDesktopMobile" class="button-group">
       <a href="#" id="toggle-drafts-mode" class="button outline-button full-width-button">&zwnj;{{!text set by the setDraftsButtonText function at the bottom of user.handlebars, that character just maintains this button's height for the few milliseconds before that happens}}</a>
-      <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-user-circle"></i> Edit profile</button>
+      <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal" data-target=".active-feed-container #updateProfileModal"><i class="fas fa-user-circle"></i> Edit profile</button>
       <a href="/settings" class="button outline-button full-width-button"><i class="fas fa-cog"></i> Settings</a>
       <a href="/logout" class="button outline-button full-width-button"><i class="fas fa-sign-out-alt"></i> Log out</a>
     </div>
@@ -27,7 +27,7 @@
 {{#if isOwnProfile}}
   <div id="profileControlsTablet">
     <a href="#" id="toggle-drafts-mode" class="button outline-button full-width-button"><i class="fas fa-pencil-ruler"></i> See drafts</a>
-    <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal" style="margin-bottom: 0.5rem;"><i class="fas fa-user-circle"></i> Edit profile</button>
+    <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal" data-target=".active-feed-container #updateProfileModal" style="margin-bottom: 0.5rem;"><i class="fas fa-user-circle"></i> Edit profile</button>
     <a href="/settings" class="button outline-button full-width-button" style="margin-bottom: 0.5rem;"><i class="fas fa-cog"></i> Settings</a>
     <a href="/logout" class="button outline-button full-width-button" style="margin-bottom: 0.5rem;"><i class="fas fa-sign-out-alt"></i> Log out</a>
   </div>
